# vestaff-rag-assignment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: analytics.py  config.py  db.py  ingest.py  main.py  rag.py  schemas.py
